--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ ul{
 .sistema .gbp{
     width: 120px;
     margin-right: 10px;
+    filter: saturate(120%) contrast(90%) brightness(135%) drop-shadow(0px 0px 1px #0000003b);
 }
 
 .logo-gbp{
@@ -92,6 +93,7 @@ ul{
 }
 .logo-gbp img{
     width: 100%;
+    filter: saturate(120%) contrast(90%) brightness(135%) drop-shadow(0px 0px 1px #0000003b);
 }
 
 .data-fiscal-a img{
@@ -113,6 +115,7 @@ ul{
     .logo-gbp{
         transform: scale(1.5);
         margin-right: 40px;
+        filter: saturate(120%) contrast(90%) brightness(135%) drop-shadow(0px 0px 1px #0000003b);
     }
     
 }
@@ -179,6 +182,10 @@ ul{
     .logo-gbp{
         transform: scale(1.8);
         margin-right: 50px;
+        
+    }
+    .gbp{
+        filter: saturate(120%) contrast(90%) brightness(135%) drop-shadow(0px 0px 1px #0000003b);
     }
 
     .sec-sistemas{
