--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ footer{
     width: 100%;
     position: absolute;
     bottom: 0;
-    background-color: rgb(23, 23, 23);
+    background-color: #222;
 }
 
 a{
